# Checkers

./: CMakeLists.txt  README.md
play/: CMakeLists.txt  main.cpp
source/: ABSeach.hpp  ABSearch.cpp  ABSearch.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Table.cpp  Table.hpp  Vector.cpp  Vector.hpp
